syntax = "proto3";

package com.example.demo.proto.greeting;

option java_multiple_files = true;

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}

service Greeter {
  
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  
  rpc SayHelloAgain (HelloRequest) returns (HelloReply) {}

}
